--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<a href="repository.13clowns-1.0.15a.zip">repository.13clowns-1.0.15a.zip</a>
+<a href="repository.13clowns-1.0.16.zip">repository.13clowns-1.0.16.zip</a>
+<a href="repository.13Cscrapers-0.0.3">repository.13Cscrapers-0.0.3</a>
